k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: creative-lab
  labels:
    app: creative-lab
spec:
  selector:
    app: creative-lab
  ports:
    - port: 8080
      targetPort: 8080
      protocol: TCP
  type: ClusterIP
