k8s/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: creative-lab
  labels:
    app: creative-lab
spec:
  to:
    kind: Service
    name: creative-lab
    weight: 100
  port:
    targetPort: 8080
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
